--- a/src/css/main.less
+++ b/src/css/main.less
@@ -137,11 +137,6 @@ body {
 		position: relative;
 		z-index: 1;
 	}
-	.layout-columns {
-		.uk-flex;
-		.uk-flex-wrap;
-		.uk-flex-wrap-space-between;
-	}
 	.sortable-handler {
 		display: none;
 	}
@@ -164,12 +159,17 @@ body {
 		top: 5px;
 		right: 5px;
 		z-index: 999;
+		box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
 		a {
-			padding: 5px;
+			padding: 10px;
 			color: #ffffff;
 			background: #3498db;
+			float: left;
 			&.delete:hover {
 				background: #c0392b
+			}
+			&.copy:hover {
+				background: #2980b9
 			}
 		}
 	}
@@ -192,7 +192,7 @@ body {
 		}
 	}
 }
-.inspectable {
+div.inspectable {
 	box-sizing: border-box;
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
@@ -201,10 +201,7 @@ body {
 	* {
 		pointer-events:all;
 	}
-	&.normal:hover {
-		outline: 2px solid white;
-	}
-	&.selected, &:hover {
+	&.selected, &.sorting, &:hover {
 		outline: 2px solid #3498db
 	}
 	&.selected {
