--- a/src/css/main.less
+++ b/src/css/main.less
@@ -142,6 +142,7 @@ body {
 
 .layout-item {
 	position: relative;
+	margin-bottom: 5px;
 	&:before {
 		content: ' ';
 		position: absolute;
@@ -233,6 +234,10 @@ body {
 			display: inline-block
 		}
 	}
+
+	.layout-column-item-wrapper {
+		margin-bottom: 10px
+	}
 }
 
 .layout-overlay {
@@ -255,10 +260,13 @@ div.inspectable {
 		pointer-events:all;
 	}
 	&.selected, &.sorting, &:hover {
-		outline: 2px solid #3498db
+		outline: 2px solid #3498db;
+		.layout-column-item-style.inspectable:hover {
+			outline: none !important
+		}
 	}
 	&.selected {
-		z-index: 10
+		z-index: 10;
 	}
 	&:hover {
 		z-index: 11
