--- a/src/css/mixins.less
+++ b/src/css/mixins.less
@@ -154,3 +154,11 @@
   -webkit-background-clip: @argument;
   background-clip: @argument;
 }
+
+
+.flex {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex
+}
