--- a/src/css/mixins.less
+++ b/src/css/mixins.less
@@ -162,3 +162,22 @@
   display: -ms-flexbox;
   display: flex
 }
+
+.userselect () {
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none
+}
+
+.grab () {
+    cursor: -webkit-grab;
+    cursor: -moz-grab;
+    cursor: grab;
+}
+
+.grabbing () {
+    cursor: -webkit-grabbing;
+    cursor: -moz-grabbing;
+    cursor: grabbing;
+}
