--- a/src/css/viewer.less
+++ b/src/css/viewer.less
@@ -1,11 +1,13 @@
 @import "uikit.less";
-@import "colors.less";
 @import "animate.css";
 @import "mixins.less";
+@import "colors.less";
+@import "element.less";
 
 body {
 	height: 100%;
 	min-height: 100vh;
+	pointer-events: all;
 }
 
 .block-wrapper {
@@ -138,6 +140,32 @@ body {
 		&:hover {
 			.block-wrapper {
 				display: block;
+			}
+		}
+	}
+}
+
+.grid {
+	&.column {
+		.element {
+			min-height: 60px;
+			&:before {
+				content: ' ';
+				position: absolute;
+				width: 100%;
+				height: 100%;
+				background-color: rgba(0, 0, 0, 0.07);
+			}
+			&:after {
+				content: 'Empty';
+				position: absolute;
+				text-transform: uppercase;
+				top: 50%;
+				left: 50%;
+				transform: translate(-50%, -50%);
+				font-size: 11px;
+				font-weight: bold;
+				color: #7a7a7a;
 			}
 		}
 	}
