Support copy+paste+delete by pressing keyboard

--- a/src/css/app.less
+++ b/src/css/app.less
@@ -42,6 +42,7 @@ html, body, #app {
         font-size: 17px;
         z-index: 11;
         position: relative;
+        margin-top: 40px;
     }
 
     .blackout {
@@ -214,7 +215,7 @@ html, body, #app {
 .element-chooser-panel {
     .stickleft(@charcoal-grey, 21);
     position: fixed;
-    top: 0;
+    top: 40px;
     left: 35px;
     width: 200px;
     z-index: 9;
@@ -480,7 +481,7 @@ html, body, #app {
             .edit-tools {
                 align-items: flex-end;
                 flex-grow: 1;
-                justify-content: space-between;
+                justify-content: flex-start;
             }
 
             .selector {
