Hmmm continue next monday

--- a/src/css/colors.less
+++ b/src/css/colors.less
@@ -2,6 +2,7 @@
 @transparent-white: rgba(255,255,255, 0.5);
 @dark-grey: #23282a;
 @charcoal-grey: #333b3e;
+@soft-grey: #eaeaea;
 @steel-young-grey: rgba(123, 130, 131, 0.5);
 @greyish-normal: #b6b6b6;
 @charcoal-grey-two: #475054;
@@ -12,3 +13,9 @@
 @gunmetal-two: #575e60;
 @pastel-red: #dc5a5a;
 @stone: #414141;
+@warm-grey: #979797;
+
+@prop-bg: #1c2123;
+@prop-bg-margin: #15181a;
+@prop-bg-border: #101213;
+@prop-bg-padding: #0c0e0f;
