--- a/src/css/viewer.less
+++ b/src/css/viewer.less
@@ -7,6 +7,16 @@ body {
 	height: 100%;
 	min-height: 100vh;
 	pointer-events: all;
+	font-family: 'Open Sans', sans-serif;
+	-webkit-font-smoothing: antialiased;
+	overflow: auto;
+}
+
+.wrapper {
+	position: relative;
+    overflow: auto;
+    min-height: 100vh;
+    height: 100%;
 }
 
 .block-wrapper {
@@ -16,7 +26,7 @@ body {
 	left: 0;
 	text-align: center;
 	pointer-events: none;
-	z-index: 999;
+	z-index: 998;
 
 	&.child {
 		top: -30px;
@@ -41,7 +51,6 @@ body {
 		cursor: default;
 		font-size: 17px;
 		background-color: @transparent-white;
-		z-index: 10;
 		position: relative;
 		pointer-events: all;
 
@@ -63,7 +72,6 @@ body {
 .block-panel {
 	background-color: @dark-grey;
 	padding: 20px;
-	z-index: 9;
 	position: relative;
 	height: 100%;
 
@@ -145,6 +153,13 @@ body {
 	}
 }
 
+.nonelement {
+	pointer-events: none;
+	.element {
+		pointer-events: all;
+	}
+}
+
 .grid {
 	&.column {
 		.element {
@@ -154,7 +169,7 @@ body {
 				position: absolute;
 				width: 100%;
 				height: 100%;
-				background-color: rgba(0, 0, 0, 0.07);
+				background-color: @soft-grey;
 			}
 			&:after {
 				content: 'Empty';
@@ -170,6 +185,12 @@ body {
 		}
 	}
 }
+
+.deep-1:before, .deep-1:after { z-index: 11; }
+.deep-2:before, .deep-2:after { z-index: 12; }
+.deep-3:before, .deep-3:after { z-index: 13; }
+.deep-4:before, .deep-4:after { z-index: 14; }
+.deep-5:before, .deep-5:after { z-index: 15; }
 
 @media (min-width: 1220px) {
 	.uk-container {
