--- a/src/css/app.less
+++ b/src/css/app.less
@@ -127,6 +127,7 @@ html, body, #app {
         overflow: visible;
         line-height: 12px;
         margin: 0 auto;
+        z-index: 10;
     }
 
     iframe {
@@ -140,7 +141,7 @@ html, body, #app {
             pointer-events: none
         }
         &.display-block-panel {
-            z-index: 2;
+            z-index: 11;
         }
     }
 }
@@ -238,9 +239,15 @@ html, body, #app {
         margin-bottom: 5px;
         padding: 15px;
         box-shadow: inset 1px 1px 0px 0px rgba(12, 12, 12, 0.38), inset 1px -3px 3px -3px rgba(255,255,255,0.2);
+
         .border-bottom {
             padding-bottom: 15px;
             border-bottom: solid 1px rgba(255, 255, 255, 0.15);
+        }
+
+        .border-top {
+            padding-top: 15px;
+            border-top: solid 1px rgba(255, 255, 255, 0.15);
         }
     }
 }
@@ -615,7 +622,7 @@ html, body, #app {
     .vline {
         width: 3px;
         background-color: @gunmetal-two;
-        margin: 0 13px;
+        margin: 0 8px;
     }
 }
 
@@ -759,12 +766,13 @@ html, body, #app {
 
 .canvas-outline {
     position: absolute;
-    z-index: 999;
+    z-index: 9;
     pointer-events: none;
     height: 100vh;
     width: 100%;
     canvas {
         position: absolute;
+        z-index: 9;
     }
 }
 
@@ -791,19 +799,6 @@ html, body, #app {
         box-shadow: 0 0 10px 0px rgba(0, 0, 0, 0.5);
         border-radius: 3px;
         border: 1px solid #000000;
-        &:before {
-            font-family: 'FontAwesome';
-            position: absolute;
-            color: @charcoal-grey;
-            top: -15px;
-            left: 50%;
-            transform: translate(-50%, 0);
-            font-size: 30px;
-        }
-
-        &.bottom:before {
-            content: "\f0d8";
-        }
     }
     button {
         .button();
@@ -818,17 +813,71 @@ html, body, #app {
 }
 
 .input-number {
+    margin-bottom: 5px;
+
     label {
         font-size: 11px;
         color: @white;
         margin-right: 10px;
+        width: 28px;
+        display: inline-block;
+    }
+
+    .input-number-wrapper {
+        background-color: #171a1b;
+        position: relative;
+        padding: 1px 30px 1px 5px;
     }
 
     .input-number-wrapper, input {
         display: inline-block;
     }
+
+    .unit-toggler {
+        position: absolute;
+        top: 0;
+        right: 15px;
+        width: 15px;
+        a {
+            font-size: 11px;
+            color: @white;
+        }
+    }
+
+    .unit-select {
+        width: 15px;
+        top: 0px;
+        right: -3px;
+        font-size: 11px;
+        background: #171a1b;
+        padding: 2px 5px;
+        position: absolute;
+        text-align: center;
+        z-index: 999;
+    }
+
     input {
-        width: 40px;
+        width: 25px;
+        background: none;
+        outline: none;
+        border: none;
+        color: @white;
+    }
+
+    .increase, .decrease {
+        position: absolute;
+        font-size: 11px;
+        color: rgba(255, 255, 255, 0.7);
+    }
+
+    .increase {
+        top: 2px;
+        right: 5px;
+    }
+
+    .decrease {
+        bottom: 1px;
+        right: 5px;
     }
 }
 
