--- a/src/css/viewer.less
+++ b/src/css/viewer.less
@@ -16,7 +16,7 @@ body {
 .wrapper {
 	position: relative;
     overflow: auto;
-    min-height: 100vh;
+    min-height: 100vh !important;
     height: 100%;
 }
 
@@ -59,25 +59,30 @@ body {
 		.element {
 			position: relative;
 			min-height: 60px;
-			&:before {
-				content: ' ';
-				position: absolute;
-				width: 100%;
-				height: 100%;
-				background-color: @soft-grey;
-				top: 0;
-				left: 0;
-			}
-			&:after {
-				content: 'Empty';
-				position: absolute;
-				text-transform: uppercase;
-				top: 50%;
-				left: 50%;
-				transform: translate(-50%, -50%);
-				font-size: 11px;
-				font-weight: bold;
-				color: #7a7a7a;
+			width: 100%;
+			height: 100%;
+
+			&.empty {
+				&:before {
+					content: ' ';
+					position: absolute;
+					width: 100%;
+					height: 100%;
+					background-color: @soft-grey;
+					top: 0;
+					left: 0;
+				}
+				&:after {
+					content: 'Empty';
+					position: absolute;
+					text-transform: uppercase;
+					top: 50%;
+					left: 50%;
+					transform: translate(-50%, -50%);
+					font-size: 11px;
+					font-weight: bold;
+					color: #7a7a7a;
+				}
 			}
 		}
 	}
