--- a/src/css/colors.less
+++ b/src/css/colors.less
@@ -1,12 +1,16 @@
 @white: #ffffff;
+@black: #000000;
 @transparent-white: rgba(255,255,255, 0.5);
 @dark-grey: #23282a;
 @charcoal-grey: #333b3e;
+@charcoal-grey-two: #475054;
+@charcoal-grey-three: #3c4549;
 @soft-grey: #eaeaea;
 @steel-young-grey: rgba(123, 130, 131, 0.5);
+@steel-young-grey2: rgba(123, 130, 131, 0.2);
 @greyish-normal: #b6b6b6;
-@charcoal-grey-two: #475054;
 @normal-sky-blue: #4a90e2;
+@sky-blue: #79b7ff;
 @gunmetal: #505c60;
 @dark: #171d1f;
 @charcoal-semi-dark: #2b3235;
