--- a/src/css/viewer.less
+++ b/src/css/viewer.less
@@ -4,6 +4,10 @@
 @import "element.less";
 @import "block.less";
 
+html {
+	height: 100%;
+}
+
 body {
 	height: 100%;
 	min-height: 100vh;
@@ -43,7 +47,11 @@ body {
 }
 
 .element {
-	min-height: 60px
+	min-height: 60px;
+	&.empty {
+		outline: 1px dashed rgba(0,0,0,0.5);
+		outline-offset: -1px !important;
+	}
 }
 
 .nonelement {
